Style CSS and SCSS update

--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,5 +1,5 @@
-﻿@media (min-width: 1024px) and (max-width: 1440px) {
-	.page-width { padding:0 0 0 7.5%!important;border:1px solid #fff000!important;}	
+@media (min-width: 1024px) and (max-width: 1440px) {
+	.page-width { padding:0 0 0 7.5%!important;}	
 	body.front { background-position:333px 100%!important;}
 	body.not-front #page{ background-position:1010px 0%!important;}
 	body.page-node-6{ background-position:779px 100%!important;}
