--- a/sass/font.scss
+++ b/sass/font.scss
@@ -1,4 +1,4 @@
-﻿@font-face {
+@font-face {
     font-family: 'sketch';
     src: url('/sites/vpd411.pfizer.edrupalgardens.com/files/201301/253f6e_0_0-webfont.eot');
     src: url('/sites/vpd411.pfizer.edrupalgardens.com/files/201301/253f6e_0_0-webfont.eot?#iefix') format('embedded-opentype'),
@@ -6,5 +6,5 @@
          url('/sites/vpd411.pfizer.edrupalgardens.com/files/201301/253f6e_0_0-webfont.ttf') format('truetype'),
          url('/sites/vpd411.pfizer.edrupalgardens.com/files/201301/253f6e_0_0-webfont.svg#sketch') format('svg');
     font-weight: normal;
-		font-style: normal; 
+	font-style: normal; 
 }
