--- a/sass/get.scss
+++ b/sass/get.scss
@@ -1,24 +1,26 @@
-﻿.buttons-wrapper {
+.buttons-wrapper {
 		overflow:hidden;
 		width:510px;
 		text-align:center;
 		float:left;
 		
+        .geton a,
 		div {
+            display:block;
 			width:155px;
 			height:152px;
 			float:left;			
 			margin-right:15px;
 			margin-bottom:15px;
-			cursor:pointer;			
+			cursor:pointer;	            
 		}	
 		
-		#button-1 {  background: url('../images/get1.png') no-repeat 0 0; }
-		#button-2 {  background: url('../images/get2.png') no-repeat 0 0; }
-		#button-3 {  background: url('../images/get3.png') no-repeat 0 0; }
-		#button-4 {  background: url('../images/get4.png') no-repeat 0 0; }
-		#button-5 {  background: url('../images/get5.png') no-repeat 0 0; }
-		#button-6 {  background: url('../images/get6.png') no-repeat 0 0; }
+		#button-1, #a1 {  background: url('../images/get1.png') no-repeat 0 0; }
+		#button-2, #a2 {  background: url('../images/get2.png') no-repeat 0 0; }
+		#button-3, #a3 {  background: url('../images/get3.png') no-repeat 0 0; }
+		#button-4, #a4 {  background: url('../images/get4.png') no-repeat 0 0; }
+		#button-5, #a5 {  background: url('../images/get5.png') no-repeat 0 0; }
+		#button-6, #a6 {  background: url('../images/get6.png') no-repeat 0 0; } 
 		.active { background-position:0 100%!important;}
 }
 .descriptions-wrapper {
@@ -26,6 +28,26 @@
 	background: url('../images/arrow.png') no-repeat 0 15px;
 	padding-left:125px;
 	/* width:480px; */
-	width:35%;
+	width:30%;
 	margin-left:-40px;
 	}
+.geton {
+    text-align: center;
+    
+    #a1 {background: url('../images/get1.png') no-repeat 0 0; }
+    #a2 {background: url('../images/get2.png') no-repeat 0 0; }
+	#a3 {background: url('../images/get3.png') no-repeat 0 0; }
+	#a4 {background: url('../images/get4.png') no-repeat 0 0; }
+	#a5 {background: url('../images/get5.png') no-repeat 0 0; }
+	#a6 {background: url('../images/get6.png') no-repeat 0 0; }
+    a { 
+        display:block;
+    	width:155px;
+    	height:152px;
+    	float:left;			
+    	margin-right:15px;
+    	margin-bottom:15px;
+    	cursor:pointer;	
+        text-indent:-9999px;
+    }    
+}
