--- a/sass/tags.scss
+++ b/sass/tags.scss
@@ -3,24 +3,18 @@ h1 { color:#33ccff;}
 h2 { color:#ff9933;}
 h3 { color:#ff9933;}
 
-h1 { font:normal 50px 'sketch',Arial,sans-serif}
-h2 { font:normal 26px 'sketch',Arial,sans-serif}
-h3 { font:normal 19px 'sketch',Arial,sans-serif}
-h3 span { font:normal 26px 'sketch', Arial, sans-serif}
+h1 { font:normal 50px 'sketch', Arial,sans-serif}
+h2 { font:bold 26px Tahoma, Arial,sans-serif}
+h3 { font:normal 20px Tahoma, Arial,sans-serif}
+h3 span { font:normal 26px 'sketch', Arial, sans-serif} 
 
 #content h1 {
-/* 	-webkit-transform: rotate(-3deg);
-	-moz-transform: rotate(-3deg);
-	-o-transform: rotate(-3deg);
-	transform: rotate(-3deg); */
-	/* filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=angle); */  
 -moz-transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
 -webkit-transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
 -o-transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
 -ms-transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
 transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg); 
-		
-	margin-bottom:50px;
+	margin-bottom:70px;
 	}
 h3 { margin-bottom:5px;}
 	
