--- a/stylesheets/get.css
+++ b/stylesheets/get.css
@@ -5,8 +5,10 @@
   text-align: center;
   float: left;
 }
-/* line 7, ../sass/get.scss */
+/* line 8, ../sass/get.scss */
+.buttons-wrapper .geton a,
 .buttons-wrapper div {
+  display: block;
   width: 155px;
   height: 152px;
   float: left;
@@ -14,41 +16,81 @@
   margin-bottom: 15px;
   cursor: pointer;
 }
-/* line 16, ../sass/get.scss */
-.buttons-wrapper #button-1 {
+/* line 18, ../sass/get.scss */
+.buttons-wrapper #button-1, .buttons-wrapper #a1 {
   background: url("../images/get1.png") no-repeat 0 0;
 }
-/* line 17, ../sass/get.scss */
-.buttons-wrapper #button-2 {
+/* line 19, ../sass/get.scss */
+.buttons-wrapper #button-2, .buttons-wrapper #a2 {
   background: url("../images/get2.png") no-repeat 0 0;
 }
-/* line 18, ../sass/get.scss */
-.buttons-wrapper #button-3 {
+/* line 20, ../sass/get.scss */
+.buttons-wrapper #button-3, .buttons-wrapper #a3 {
   background: url("../images/get3.png") no-repeat 0 0;
 }
-/* line 19, ../sass/get.scss */
-.buttons-wrapper #button-4 {
+/* line 21, ../sass/get.scss */
+.buttons-wrapper #button-4, .buttons-wrapper #a4 {
   background: url("../images/get4.png") no-repeat 0 0;
 }
-/* line 20, ../sass/get.scss */
-.buttons-wrapper #button-5 {
+/* line 22, ../sass/get.scss */
+.buttons-wrapper #button-5, .buttons-wrapper #a5 {
   background: url("../images/get5.png") no-repeat 0 0;
 }
-/* line 21, ../sass/get.scss */
-.buttons-wrapper #button-6 {
+/* line 23, ../sass/get.scss */
+.buttons-wrapper #button-6, .buttons-wrapper #a6 {
   background: url("../images/get6.png") no-repeat 0 0;
 }
-/* line 22, ../sass/get.scss */
+/* line 24, ../sass/get.scss */
 .buttons-wrapper .active {
-  background-position: 0 100%!important;
+  background-position: 0 100% !important;
 }
 
-/* line 24, ../sass/get.scss */
+/* line 26, ../sass/get.scss */
 .descriptions-wrapper {
   float: left;
   background: url("../images/arrow.png") no-repeat 0 15px;
   padding-left: 125px;
   /* width:480px; */
-  width: 35%;
+  width: 30%;
   margin-left: -40px;
+}
+
+/* line 34, ../sass/get.scss */
+.geton {
+  text-align: center;
+}
+/* line 37, ../sass/get.scss */
+.geton #a1 {
+  background: url("../images/get1.png") no-repeat 0 0;
+}
+/* line 38, ../sass/get.scss */
+.geton #a2 {
+  background: url("../images/get2.png") no-repeat 0 0;
+}
+/* line 39, ../sass/get.scss */
+.geton #a3 {
+  background: url("../images/get3.png") no-repeat 0 0;
+}
+/* line 40, ../sass/get.scss */
+.geton #a4 {
+  background: url("../images/get4.png") no-repeat 0 0;
+}
+/* line 41, ../sass/get.scss */
+.geton #a5 {
+  background: url("../images/get5.png") no-repeat 0 0;
+}
+/* line 42, ../sass/get.scss */
+.geton #a6 {
+  background: url("../images/get6.png") no-repeat 0 0;
+}
+/* line 43, ../sass/get.scss */
+.geton a {
+  display: block;
+  width: 155px;
+  height: 152px;
+  float: left;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  cursor: pointer;
+  text-indent: -9999px;
 }
