--- a/stylesheets/tags.css
+++ b/stylesheets/tags.css
@@ -26,12 +26,12 @@ h1 {
 
 /* line 7, ../sass/tags.scss */
 h2 {
-  font: normal 26px "sketch", Arial, sans-serif;
+  font: bold 26px Tahoma, Arial, sans-serif;
 }
 
 /* line 8, ../sass/tags.scss */
 h3 {
-  font: normal 19px "sketch", Arial, sans-serif;
+  font: normal 20px Tahoma, Arial, sans-serif;
 }
 
 /* line 9, ../sass/tags.scss */
@@ -41,25 +41,20 @@ h3 span {
 
 /* line 11, ../sass/tags.scss */
 #content h1 {
-  /* 	-webkit-transform: rotate(-3deg);
-  	-moz-transform: rotate(-3deg);
-  	-o-transform: rotate(-3deg);
-  	transform: rotate(-3deg); */
-  /* filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=angle); */
   -moz-transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
   -webkit-transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
   -o-transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
   -ms-transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
   transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg);
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 
-/* line 25, ../sass/tags.scss */
+/* line 19, ../sass/tags.scss */
 h3 {
   margin-bottom: 5px;
 }
 
-/* line 27, ../sass/tags.scss */
+/* line 21, ../sass/tags.scss */
 body.page-node-11 h3 span {
   font: normal 39px sketch;
 }
