--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,6 +1,9 @@
-@media (max-width: 1425px) {
+@media (min-width: 1024px) and (max-width: 1425px) {
 	.page-width { padding:0 6.5%!important;}	
 	body.front #page { background-position:295px 100%!important;}
+    
+    
+    
 	body.not-front #page{ background-position:1010px 0%!important;}
 	body.page-node-6{ background-position:779px 100%!important;}
 	body.page-node-16{ background-position:779px 100%!important;}
@@ -12,7 +15,7 @@
 	body.front #copyright .get_facts { left:100px;}
 	body.front #node-46 .home { padding-left:55px;} 
 }
-@media (max-width: 960px) { 
+@media (max-width: 960px){ 
     @import 'jquery.fancybox-1.3.4';
 	html, body {
 		background:#411d63!important;
@@ -113,13 +116,22 @@
                 display:block!important;
                 
                 a {
-                    width:14%
-                    width:90px;
-                    height:85px;
+                    width:28%; 
+                    height:120px; 
+                    /*width:90px;
+                    height:85px;*/
                     background-size:100%;
                 }
             }            
             .get1 { display:none;}
+            #video { display:none!important;}
+            #video2 {
+                display:block!important;
+                background: url('../images/video_mobile.png') no-repeat 0 0; 	  
+            	width:479px;
+            	height:318px;
+                padding:31px 0 0 104px;
+            }
 		}
 		#copyright {			
 			padding:0;				
