--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,5 @@
 /*cssing by flpk*/
-@media (max-width: 1425px) {
+@media (min-width: 1024px) and (max-width: 1425px) {
   /* line 2, ../sass/responsive.scss */
   .page-width {
     padding: 0 6.5% !important;
@@ -10,52 +10,52 @@
     background-position: 295px 100% !important;
   }
 
-  /* line 4, ../sass/responsive.scss */
+  /* line 7, ../sass/responsive.scss */
   body.not-front #page {
     background-position: 1010px 0% !important;
   }
 
-  /* line 5, ../sass/responsive.scss */
+  /* line 8, ../sass/responsive.scss */
   body.page-node-6 {
     background-position: 779px 100% !important;
   }
 
-  /* line 6, ../sass/responsive.scss */
+  /* line 9, ../sass/responsive.scss */
   body.page-node-16 {
     background-position: 779px 100% !important;
   }
 
-  /* line 7, ../sass/responsive.scss */
+  /* line 10, ../sass/responsive.scss */
   body.page-node-21 {
     background-position: 1048px 100% !important;
   }
 
-  /* line 8, ../sass/responsive.scss */
+  /* line 11, ../sass/responsive.scss */
   body.page-node-26 {
     background-position: 729px 100% !important;
   }
 
-  /* line 9, ../sass/responsive.scss */
+  /* line 12, ../sass/responsive.scss */
   body.page-node-31 {
     background-position: 788px 100% !important;
   }
 
-  /* line 10, ../sass/responsive.scss */
+  /* line 13, ../sass/responsive.scss */
   body.front .bird {
     left: -108px!important;
   }
 
-  /* line 11, ../sass/responsive.scss */
+  /* line 14, ../sass/responsive.scss */
   body .bird {
     display: none!important;
   }
 
-  /* line 12, ../sass/responsive.scss */
+  /* line 15, ../sass/responsive.scss */
   body.front #copyright .get_facts {
     left: 100px;
   }
 
-  /* line 13, ../sass/responsive.scss */
+  /* line 16, ../sass/responsive.scss */
   body.front #node-46 .home {
     padding-left: 55px;
   }
@@ -548,42 +548,42 @@
     filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_nw.png', sizingMethod='scale');
   }
 
-  /* line 17, ../sass/responsive.scss */
+  /* line 20, ../sass/responsive.scss */
   html, body {
     background: #411d63!important;
     font-size: 100%!important;
   }
-  /* line 21, ../sass/responsive.scss */
+  /* line 24, ../sass/responsive.scss */
   html h2, body h2 {
     font: bold 30px Tahoma, Arial;
   }
-  /* line 22, ../sass/responsive.scss */
+  /* line 25, ../sass/responsive.scss */
   html h3, body h3 {
     font: 28px Tahoma, Arial;
   }
-  /* line 24, ../sass/responsive.scss */
+  /* line 27, ../sass/responsive.scss */
   html #page, body #page {
     background: none!important;
   }
-  /* line 27, ../sass/responsive.scss */
+  /* line 30, ../sass/responsive.scss */
   html #page .page-width, body #page .page-width {
     padding: 0!important;
   }
-  /* line 28, ../sass/responsive.scss */
+  /* line 31, ../sass/responsive.scss */
   html #page .lining, body #page .lining {
     padding: 0;
   }
-  /* line 29, ../sass/responsive.scss */
+  /* line 32, ../sass/responsive.scss */
   html #page #header-inner, body #page #header-inner {
     padding: 0;
   }
-  /* line 30, ../sass/responsive.scss */
+  /* line 33, ../sass/responsive.scss */
   html #page #site-name, body #page #site-name {
     background: none;
     height: auto;
     width: auto;
   }
-  /* line 35, ../sass/responsive.scss */
+  /* line 38, ../sass/responsive.scss */
   html #page #site-name a, body #page #site-name a {
     text-indent: 0;
     color: #ff9b20!important;
@@ -591,26 +591,26 @@
     height: auto!important;
     width: auto!important;
   }
-  /* line 43, ../sass/responsive.scss */
+  /* line 46, ../sass/responsive.scss */
   html #page .region-header .page-element, body #page .region-header .page-element {
     width: auto;
   }
-  /* line 44, ../sass/responsive.scss */
+  /* line 47, ../sass/responsive.scss */
   html #page #site-slogan, body #page #site-slogan {
     font: 70% Tahoma, Arial;
   }
-  /* line 45, ../sass/responsive.scss */
+  /* line 48, ../sass/responsive.scss */
   html #page #navigation, body #page #navigation {
     margin: 0;
     height: auto;
     width: auto;
     background: none;
   }
-  /* line 51, ../sass/responsive.scss */
+  /* line 54, ../sass/responsive.scss */
   html #page #navigation .block, body #page #navigation .block {
     margin: 0;
   }
-  /* line 53, ../sass/responsive.scss */
+  /* line 56, ../sass/responsive.scss */
   html #page #navigation #dropdown_button, body #page #navigation #dropdown_button {
     background: url("../images/m.png") no-repeat 0% 0%;
     width: 153px;
@@ -622,18 +622,18 @@
     margin-top: -20px;
     margin-right: 22px;
   }
-  /* line 64, ../sass/responsive.scss */
+  /* line 67, ../sass/responsive.scss */
   html #page #navigation .off_menu, body #page #navigation .off_menu {
     background: url("../images/m_off.png") no-repeat 0% 0% !important;
   }
-  /* line 65, ../sass/responsive.scss */
+  /* line 68, ../sass/responsive.scss */
   html #page #navigation #block-block-41, body #page #navigation #block-block-41 {
     background: url("../images/960head.png") repeat-x 0% 0%;
     display: block;
     position: relative;
     z-index: 200;
   }
-  /* line 71, ../sass/responsive.scss */
+  /* line 74, ../sass/responsive.scss */
   html #page #navigation ul, body #page #navigation ul {
     height: auto;
     display: none;
@@ -643,7 +643,7 @@
     z-index: 500;
     width: 100%;
   }
-  /* line 80, ../sass/responsive.scss */
+  /* line 83, ../sass/responsive.scss */
   html #page #navigation ul .menu-link-2926 a, body #page #navigation ul .menu-link-2926 a {
     color: #fff!important;
     background: url("../images/m_ico.png") no-repeat;
@@ -652,7 +652,7 @@
     padding-left: 75px;
     text-transform: uppercase;
   }
-  /* line 88, ../sass/responsive.scss */
+  /* line 91, ../sass/responsive.scss */
   html #page #navigation ul li, body #page #navigation ul li {
     float: none;
     margin: 0 30px;
@@ -660,11 +660,11 @@
     background: #ff9b21 url("../images/m_li.png") repeat-x 0% 0%;
     border: 1px solid white;
   }
-  /* line 95, ../sass/responsive.scss */
+  /* line 98, ../sass/responsive.scss */
   html #page #navigation ul li .menu-link-2926 a, body #page #navigation ul li .menu-link-2926 a {
     color: #fff!important;
   }
-  /* line 98, ../sass/responsive.scss */
+  /* line 101, ../sass/responsive.scss */
   html #page #navigation ul li a, body #page #navigation ul li a {
     text-indent: 0;
     background: none;
@@ -676,52 +676,66 @@
     line-height: 90px;
     /*font:30px/90px Arial; */
   }
-  /* line 112, ../sass/responsive.scss */
+  /* line 115, ../sass/responsive.scss */
   html #page .geton, body #page .geton {
     display: block!important;
   }
-  /* line 115, ../sass/responsive.scss */
+  /* line 118, ../sass/responsive.scss */
   html #page .geton a, body #page .geton a {
-    width: 90px;
-    height: 85px;
+    width: 28%;
+    height: 120px;
+    /*width:90px;
+    height:85px;*/
     background-size: 100%;
   }
-  /* line 121, ../sass/responsive.scss */
+  /* line 126, ../sass/responsive.scss */
   html #page .get1, body #page .get1 {
     display: none;
   }
-  /* line 123, ../sass/responsive.scss */
+  /* line 127, ../sass/responsive.scss */
+  html #page #video, body #page #video {
+    display: none!important;
+  }
+  /* line 128, ../sass/responsive.scss */
+  html #page #video2, body #page #video2 {
+    display: block!important;
+    background: url("../images/video_mobile.png") no-repeat 0 0;
+    width: 479px;
+    height: 318px;
+    padding: 31px 0 0 104px;
+  }
+  /* line 136, ../sass/responsive.scss */
   html #copyright, body #copyright {
     padding: 0;
     background: none;
   }
-  /* line 127, ../sass/responsive.scss */
+  /* line 140, ../sass/responsive.scss */
   html #copyright .page-width, body #copyright .page-width {
     padding: 0!important;
   }
-  /* line 129, ../sass/responsive.scss */
+  /* line 142, ../sass/responsive.scss */
   html #copyright .left, html #copyright .right, body #copyright .left, body #copyright .right {
     float: none;
   }
-  /* line 130, ../sass/responsive.scss */
+  /* line 143, ../sass/responsive.scss */
   html #copyright .left, body #copyright .left {
     font: 120%/43px Tahoma, Arial;
     text-align: center;
     background: #3cb5f1 url("../images/copy2.png") repeat-x 0% 0%;
     padding: 0 4.6875%;
   }
-  /* line 136, ../sass/responsive.scss */
+  /* line 149, ../sass/responsive.scss */
   html #copyright .left a, body #copyright .left a {
     margin: 0;
   }
-  /* line 138, ../sass/responsive.scss */
+  /* line 151, ../sass/responsive.scss */
   html #copyright .right, body #copyright .right {
     font: 100%/63px Tahoma, Arial;
     background-position: 100% 50%;
     height: auto;
     padding: 0 4.6875%;
   }
-  /* line 144, ../sass/responsive.scss */
+  /* line 157, ../sass/responsive.scss */
   html #copyright .get_facts, body #copyright .get_facts {
     background: url("../images/facts2.png") no-repeat 0% 0%;
     width: 100%;
@@ -730,7 +744,7 @@
     left: 0px!important;
     top: -127px;
   }
-  /* line 152, ../sass/responsive.scss */
+  /* line 165, ../sass/responsive.scss */
   html #copyright .bird, body #copyright .bird {
     display: block!important;
     right: 0!important;
@@ -740,11 +754,11 @@
     height: 67px;
     top: -65px;
   }
-  /* line 163, ../sass/responsive.scss */
+  /* line 176, ../sass/responsive.scss */
   html body.front #node-46 .home, body body.front #node-46 .home {
     width: auto!important;
   }
-  /* line 164, ../sass/responsive.scss */
+  /* line 177, ../sass/responsive.scss */
   html #block-rotating-banner-1, body #block-rotating-banner-1 {
     display: block!important;
     border-top: 3px solid #b8d647;
@@ -753,22 +767,22 @@
     position: relative;
     z-index: 100;
   }
-  /* line 172, ../sass/responsive.scss */
+  /* line 185, ../sass/responsive.scss */
   html #block-rotating-banner-1 .rotating-banner, body #block-rotating-banner-1 .rotating-banner {
     overflow: auto;
   }
-  /* line 175, ../sass/responsive.scss */
+  /* line 188, ../sass/responsive.scss */
   html #block-block-16,
   html #block-block-31, body #block-block-16,
   body #block-block-31 {
     margin: 0;
   }
-  /* line 176, ../sass/responsive.scss */
+  /* line 189, ../sass/responsive.scss */
   html #node-16 .left, body #node-16 .left {
     width: auto!important;
     margin-right: 0px!important;
   }
-  /* line 182, ../sass/responsive.scss */
+  /* line 195, ../sass/responsive.scss */
   html .tips,
   html .learn,
   html .vpd, body .tips,
@@ -776,7 +790,7 @@
   body .vpd {
     width: auto!important;
   }
-  /* line 183, ../sass/responsive.scss */
+  /* line 196, ../sass/responsive.scss */
   html #content .pane #block-system-main .node, body #content .pane #block-system-main .node {
     padding: 0 30px !important;
   }
@@ -864,12 +878,19 @@
   left: 696px;
 }
 
-/*@import 'font';*/
+@font-face {
+  font-family: 'sketch';
+  src: url("/sites/vpd411.pfizer.edrupalgardens.com/files/201301/253f6e_0_0-webfont.eot");
+  src: url("/sites/vpd411.pfizer.edrupalgardens.com/files/201301/253f6e_0_0-webfont.eot?#iefix") format("embedded-opentype"), url("/sites/vpd411.pfizer.edrupalgardens.com/files/201301/253f6e_0_0-webfont.woff") format("woff"), url("/sites/vpd411.pfizer.edrupalgardens.com/files/201301/253f6e_0_0-webfont.ttf") format("truetype"), url("/sites/vpd411.pfizer.edrupalgardens.com/files/201301/253f6e_0_0-webfont.svg#sketch") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* line 1, ../sass/front.scss */
 body.front {
-  background: url("../images/nav_home.png") no-repeat 85px 150px;
+  background: url("../images/nav_home.png") no-repeat 90px 130px;
 }
-/* line 3, ../sass/front.scss */
+/* line 4, ../sass/front.scss */
 body.front #page {
   background: url("../images/home.png") no-repeat 100% 100%;
 }
@@ -960,7 +981,7 @@ body.front #page-title {
 }
 /* line 82, ../sass/front.scss */
 body.front #node-46 .home {
-  width: 445px;
+  width: 505px;
   padding-left: 0;
 }
 /* line 87, ../sass/front.scss */
@@ -1351,6 +1372,7 @@ body.page-node-16 #content h1#page-title {
 /* line 129, ../sass/style.scss */
 #page {
   padding-bottom: 250px;
+  overflow-x: hidden;
 }
 
 /* line 131, ../sass/style.scss */
@@ -1441,37 +1463,43 @@ ul.primary li.active a {
 /* line 161, ../sass/style.scss */
 #video {
   background: url("../images/video.png") no-repeat 0 0;
-  width: 882px;
-  height: 556px;
+  width: 962px;
+  height: 522px;
+  padding: 53px 0 0 68px;
 }
 
 /* line 167, ../sass/style.scss */
+#video2 {
+  display: none;
+}
+
+/* line 168, ../sass/style.scss */
 #node-16 .left {
   width: 340px;
   margin-right: 30px;
 }
-/* line 171, ../sass/style.scss */
+/* line 172, ../sass/style.scss */
 #node-16 .left ul ul {
   list-style: none;
   padding: 0;
 }
 
-/* line 174, ../sass/style.scss */
+/* line 175, ../sass/style.scss */
 #block-block-41 {
   display: none;
 }
 
-/* line 175, ../sass/style.scss */
+/* line 176, ../sass/style.scss */
 .tips {
   width: 500px;
 }
 
-/* line 176, ../sass/style.scss */
+/* line 177, ../sass/style.scss */
 .learn {
   width: 500px;
 }
 
-/* line 177, ../sass/style.scss */
+/* line 178, ../sass/style.scss */
 .vpd {
   width: 680px;
 }
