upload new responsive. change to min-width:640;

--- a/sass/jquery.fancybox-1.3.4.scss
+++ b/sass/jquery.fancybox-1.3.4.scss
@@ -200,7 +200,7 @@
 	width: 22px;
 	height: 22px;
 	z-index: 1001;
-    background-color:#f5f3f7;
+    background-color:#fff;
 }
 
 #fancybox-bg-n {
