--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,9 +1,6 @@
-@media (min-width: 1024px) and (max-width: 1425px) {
-	.page-width { padding:0 6.5%!important;}	
+@media (max-width: 1425px) {
+	.page-width { padding:0 30px}	
 	body.front #page { background-position:295px 100%!important;}
-    
-    
-    
 	body.not-front #page{ background-position:1010px 0%!important;}
 	body.page-node-6{ background-position:779px 100%!important;}
 	body.page-node-16{ background-position:779px 100%!important;}
@@ -15,7 +12,25 @@
 	body.front #copyright .get_facts { left:100px;}
 	body.front #node-46 .home { padding-left:55px;} 
 }
-@media (max-width: 960px){ 
+@media (min-width: 640px) and (max-width: 1024px){  
+    .page-width { 
+        width:964px!important;
+        padding:0 20px!important; 
+    }
+    /*
+    .geton{
+        display:block!important;
+        
+        a {
+            width:275px!important; 
+            height:269px!important;             
+            background-size:100%!important;
+        }
+    }  
+    .get1 { display:none;}
+    */
+}
+@media (max-width: 640px){ 
     @import 'jquery.fancybox-1.3.4';
 	html, body {
 		background:#411d63!important;
@@ -27,7 +42,7 @@
 		#page {
 			background:none!important;           
             
-            .page-width { padding:0!important;} 
+            .page-width { padding:0!important; width:624px!important;} 
             .lining { padding:0;}
             #header-inner { padding:0;} 
             #site-name {
@@ -115,11 +130,9 @@
             .geton{
                 display:block!important;
                 
-                a {
-                    width:28%; 
-                    height:120px; 
-                    /*width:90px;
-                    height:85px;*/
+                a {                    
+                    width:155px;
+                    height:148px; 
                     background-size:100%;
                 }
             }            
@@ -137,7 +150,7 @@
 			padding:0;				
 			background:none;
             
-            .page-width{padding:0!important}
+            .page-width{padding:0!important; width:624px!important;}
             
 			.left, .right {float:none;}
 			.left {
@@ -158,7 +171,8 @@
                 background: url('../images/facts2.png') no-repeat 0% 0%;
                 width:100%;
                 background-size:100%;
-                height:63px;
+                /*height:63px;*/
+                height:100%; 
                 left:0px!important;
                 top:-127px;
             }
