--- a/stylesheets/jquery.fancybox-1.3.4.css
+++ b/stylesheets/jquery.fancybox-1.3.4.css
@@ -95,7 +95,7 @@
 }
 /* line 88, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-content h3 span {
-  font: Tahoma, Arial;
+  font: bold 30px Tahoma, Arial;
 }
 
 /* line 93, ../sass/jquery.fancybox-1.3.4.scss */
@@ -224,7 +224,7 @@
   width: 22px;
   height: 22px;
   z-index: 1001;
-  background-color: #f5f3f7;
+  background-color: #fff;
 }
 
 /* line 206, ../sass/jquery.fancybox-1.3.4.scss */
