--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,7 +1,7 @@
-@media (min-width: 1024px) and (max-width: 1425px) {
+@media (max-width: 1425px) {
   /* line 2, ../sass/responsive.scss */
   .page-width {
-    padding: 0 6.5% !important;
+    padding: 0 30px;
   }
 
   /* line 3, ../sass/responsive.scss */
@@ -9,57 +9,77 @@
     background-position: 295px 100% !important;
   }
 
-  /* line 7, ../sass/responsive.scss */
+  /* line 4, ../sass/responsive.scss */
   body.not-front #page {
     background-position: 1010px 0% !important;
   }
 
-  /* line 8, ../sass/responsive.scss */
+  /* line 5, ../sass/responsive.scss */
   body.page-node-6 {
     background-position: 779px 100% !important;
   }
 
-  /* line 9, ../sass/responsive.scss */
+  /* line 6, ../sass/responsive.scss */
   body.page-node-16 {
     background-position: 779px 100% !important;
   }
 
-  /* line 10, ../sass/responsive.scss */
+  /* line 7, ../sass/responsive.scss */
   body.page-node-21 {
     background-position: 1048px 100% !important;
   }
 
-  /* line 11, ../sass/responsive.scss */
+  /* line 8, ../sass/responsive.scss */
   body.page-node-26 {
     background-position: 729px 100% !important;
   }
 
-  /* line 12, ../sass/responsive.scss */
+  /* line 9, ../sass/responsive.scss */
   body.page-node-31 {
     background-position: 788px 100% !important;
   }
 
-  /* line 13, ../sass/responsive.scss */
+  /* line 10, ../sass/responsive.scss */
   body.front .bird {
     left: -108px!important;
   }
 
-  /* line 14, ../sass/responsive.scss */
+  /* line 11, ../sass/responsive.scss */
   body .bird {
     display: none!important;
   }
 
-  /* line 15, ../sass/responsive.scss */
+  /* line 12, ../sass/responsive.scss */
   body.front #copyright .get_facts {
     left: 100px;
   }
 
-  /* line 16, ../sass/responsive.scss */
+  /* line 13, ../sass/responsive.scss */
   body.front #node-46 .home {
     padding-left: 55px;
   }
 }
-@media (max-width: 960px) {
+@media (min-width: 640px) and (max-width: 1024px) {
+  /* line 16, ../sass/responsive.scss */
+  .page-width {
+    width: 964px!important;
+    padding: 0 20px !important;
+  }
+
+  /*
+  .geton{
+      display:block!important;
+      
+      a {
+          width:275px!important; 
+          height:269px!important;             
+          background-size:100%!important;
+      }
+  }  
+  .get1 { display:none;}
+  */
+}
+@media (max-width: 640px) {
   /*
    * FancyBox - jQuery Plugin
    * Simple and fancy lightbox alternative
@@ -286,7 +306,7 @@
     width: 22px;
     height: 22px;
     z-index: 1001;
-    background-color: #f5f3f7;
+    background-color: #fff;
   }
 
   /* line 206, ../sass/jquery.fancybox-1.3.4.scss */
@@ -547,42 +567,43 @@
     filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_nw.png', sizingMethod='scale');
   }
 
-  /* line 20, ../sass/responsive.scss */
+  /* line 35, ../sass/responsive.scss */
   html, body {
     background: #411d63!important;
     font-size: 100%!important;
   }
-  /* line 24, ../sass/responsive.scss */
+  /* line 39, ../sass/responsive.scss */
   html h2, body h2 {
     font: bold 30px Tahoma, Arial;
   }
-  /* line 25, ../sass/responsive.scss */
+  /* line 40, ../sass/responsive.scss */
   html h3, body h3 {
     font: 28px Tahoma, Arial;
   }
-  /* line 27, ../sass/responsive.scss */
+  /* line 42, ../sass/responsive.scss */
   html #page, body #page {
     background: none!important;
   }
-  /* line 30, ../sass/responsive.scss */
+  /* line 45, ../sass/responsive.scss */
   html #page .page-width, body #page .page-width {
     padding: 0!important;
+    width: 624px!important;
   }
-  /* line 31, ../sass/responsive.scss */
+  /* line 46, ../sass/responsive.scss */
   html #page .lining, body #page .lining {
     padding: 0;
   }
-  /* line 32, ../sass/responsive.scss */
+  /* line 47, ../sass/responsive.scss */
   html #page #header-inner, body #page #header-inner {
     padding: 0;
   }
-  /* line 33, ../sass/responsive.scss */
+  /* line 48, ../sass/responsive.scss */
   html #page #site-name, body #page #site-name {
     background: none;
     height: auto;
     width: auto;
   }
-  /* line 38, ../sass/responsive.scss */
+  /* line 53, ../sass/responsive.scss */
   html #page #site-name a, body #page #site-name a {
     text-indent: 0;
     color: #ff9b20!important;
@@ -590,26 +611,26 @@
     height: auto!important;
     width: auto!important;
   }
-  /* line 46, ../sass/responsive.scss */
+  /* line 61, ../sass/responsive.scss */
   html #page .region-header .page-element, body #page .region-header .page-element {
     width: auto;
   }
-  /* line 47, ../sass/responsive.scss */
+  /* line 62, ../sass/responsive.scss */
   html #page #site-slogan, body #page #site-slogan {
     font: 70% Tahoma, Arial;
   }
-  /* line 48, ../sass/responsive.scss */
+  /* line 63, ../sass/responsive.scss */
   html #page #navigation, body #page #navigation {
     margin: 0;
     height: auto;
     width: auto;
     background: none;
   }
-  /* line 54, ../sass/responsive.scss */
+  /* line 69, ../sass/responsive.scss */
   html #page #navigation .block, body #page #navigation .block {
     margin: 0;
   }
-  /* line 56, ../sass/responsive.scss */
+  /* line 71, ../sass/responsive.scss */
   html #page #navigation #dropdown_button, body #page #navigation #dropdown_button {
     background: url("../images/m.png") no-repeat 0% 0%;
     width: 153px;
@@ -621,18 +642,18 @@
     margin-top: -20px;
     margin-right: 22px;
   }
-  /* line 67, ../sass/responsive.scss */
+  /* line 82, ../sass/responsive.scss */
   html #page #navigation .off_menu, body #page #navigation .off_menu {
     background: url("../images/m_off.png") no-repeat 0% 0% !important;
   }
-  /* line 68, ../sass/responsive.scss */
+  /* line 83, ../sass/responsive.scss */
   html #page #navigation #block-block-41, body #page #navigation #block-block-41 {
     background: url("../images/960head.png") repeat-x 0% 0%;
     display: block;
     position: relative;
     z-index: 200;
   }
-  /* line 74, ../sass/responsive.scss */
+  /* line 89, ../sass/responsive.scss */
   html #page #navigation ul, body #page #navigation ul {
     height: auto;
     display: none;
@@ -642,7 +663,7 @@
     z-index: 500;
     width: 100%;
   }
-  /* line 83, ../sass/responsive.scss */
+  /* line 98, ../sass/responsive.scss */
   html #page #navigation ul .menu-link-2926 a, body #page #navigation ul .menu-link-2926 a {
     color: #fff!important;
     background: url("../images/m_ico.png") no-repeat;
@@ -651,7 +672,7 @@
     padding-left: 75px;
     text-transform: uppercase;
   }
-  /* line 91, ../sass/responsive.scss */
+  /* line 106, ../sass/responsive.scss */
   html #page #navigation ul li, body #page #navigation ul li {
     float: none;
     margin: 0 30px;
@@ -659,11 +680,11 @@
     background: #ff9b21 url("../images/m_li.png") repeat-x 0% 0%;
     border: 1px solid white;
   }
-  /* line 98, ../sass/responsive.scss */
+  /* line 113, ../sass/responsive.scss */
   html #page #navigation ul li .menu-link-2926 a, body #page #navigation ul li .menu-link-2926 a {
     color: #fff!important;
   }
-  /* line 101, ../sass/responsive.scss */
+  /* line 116, ../sass/responsive.scss */
   html #page #navigation ul li a, body #page #navigation ul li a {
     text-indent: 0;
     background: none;
@@ -675,27 +696,25 @@
     line-height: 90px;
     /*font:30px/90px Arial; */
   }
-  /* line 115, ../sass/responsive.scss */
+  /* line 130, ../sass/responsive.scss */
   html #page .geton, body #page .geton {
     display: block!important;
   }
-  /* line 118, ../sass/responsive.scss */
+  /* line 133, ../sass/responsive.scss */
   html #page .geton a, body #page .geton a {
-    width: 28%;
-    height: 120px;
-    /*width:90px;
-    height:85px;*/
+    width: 155px;
+    height: 148px;
     background-size: 100%;
   }
-  /* line 126, ../sass/responsive.scss */
+  /* line 139, ../sass/responsive.scss */
   html #page .get1, body #page .get1 {
     display: none;
   }
-  /* line 127, ../sass/responsive.scss */
+  /* line 140, ../sass/responsive.scss */
   html #page #video, body #page #video {
     display: none!important;
   }
-  /* line 128, ../sass/responsive.scss */
+  /* line 141, ../sass/responsive.scss */
   html #page #video2, body #page #video2 {
     display: block!important;
     background: url("../images/video_mobile.png") no-repeat 0 0;
@@ -703,47 +722,49 @@
     height: 318px;
     padding: 31px 0 0 104px;
   }
-  /* line 136, ../sass/responsive.scss */
+  /* line 149, ../sass/responsive.scss */
   html #copyright, body #copyright {
     padding: 0;
     background: none;
   }
-  /* line 140, ../sass/responsive.scss */
+  /* line 153, ../sass/responsive.scss */
   html #copyright .page-width, body #copyright .page-width {
     padding: 0!important;
+    width: 624px!important;
   }
-  /* line 142, ../sass/responsive.scss */
+  /* line 155, ../sass/responsive.scss */
   html #copyright .left, html #copyright .right, body #copyright .left, body #copyright .right {
     float: none;
   }
-  /* line 143, ../sass/responsive.scss */
+  /* line 156, ../sass/responsive.scss */
   html #copyright .left, body #copyright .left {
     font: 120%/43px Tahoma, Arial;
     text-align: center;
     background: #3cb5f1 url("../images/copy2.png") repeat-x 0% 0%;
     padding: 0 4.6875%;
   }
-  /* line 149, ../sass/responsive.scss */
+  /* line 162, ../sass/responsive.scss */
   html #copyright .left a, body #copyright .left a {
     margin: 0;
   }
-  /* line 151, ../sass/responsive.scss */
+  /* line 164, ../sass/responsive.scss */
   html #copyright .right, body #copyright .right {
     font: 100%/63px Tahoma, Arial;
     background-position: 100% 50%;
     height: auto;
     padding: 0 4.6875%;
   }
-  /* line 157, ../sass/responsive.scss */
+  /* line 170, ../sass/responsive.scss */
   html #copyright .get_facts, body #copyright .get_facts {
     background: url("../images/facts2.png") no-repeat 0% 0%;
     width: 100%;
     background-size: 100%;
-    height: 63px;
+    /*height:63px;*/
+    height: 100%;
     left: 0px!important;
     top: -127px;
   }
-  /* line 165, ../sass/responsive.scss */
+  /* line 179, ../sass/responsive.scss */
   html #copyright .bird, body #copyright .bird {
     display: block!important;
     right: 0!important;
@@ -753,11 +774,11 @@
     height: 67px;
     top: -65px;
   }
-  /* line 176, ../sass/responsive.scss */
+  /* line 190, ../sass/responsive.scss */
   html body.front #node-46 .home, body body.front #node-46 .home {
     width: auto!important;
   }
-  /* line 177, ../sass/responsive.scss */
+  /* line 191, ../sass/responsive.scss */
   html #block-rotating-banner-1, body #block-rotating-banner-1 {
     display: block!important;
     border-top: 3px solid #b8d647;
@@ -766,22 +787,22 @@
     position: relative;
     z-index: 100;
   }
-  /* line 185, ../sass/responsive.scss */
+  /* line 199, ../sass/responsive.scss */
   html #block-rotating-banner-1 .rotating-banner, body #block-rotating-banner-1 .rotating-banner {
     overflow: auto;
   }
-  /* line 188, ../sass/responsive.scss */
+  /* line 202, ../sass/responsive.scss */
   html #block-block-16,
   html #block-block-31, body #block-block-16,
   body #block-block-31 {
     margin: 0;
   }
-  /* line 189, ../sass/responsive.scss */
+  /* line 203, ../sass/responsive.scss */
   html #node-16 .left, body #node-16 .left {
     width: auto!important;
     margin-right: 0px!important;
   }
-  /* line 195, ../sass/responsive.scss */
+  /* line 209, ../sass/responsive.scss */
   html .tips,
   html .learn,
   html .vpd, body .tips,
@@ -789,7 +810,7 @@
   body .vpd {
     width: auto!important;
   }
-  /* line 196, ../sass/responsive.scss */
+  /* line 210, ../sass/responsive.scss */
   html #content .pane #block-system-main .node, body #content .pane #block-system-main .node {
     padding: 0 30px !important;
   }
