--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,4 +1,4 @@
-@media (max-width: 1425px) {
+@media (max-width: 1425px) { 
 	.page-width { padding:0 30px}	
 	body.front #page { background-position:295px 100%!important;}
 	body.not-front #page{ background-position:1010px 0%!important;}
@@ -29,6 +29,9 @@
     }  
     .get1 { display:none;}
     */
+    #copyright {
+        width:auto!important;
+    }
 }
 @media (max-width: 640px){ 
     @import 'jquery.fancybox-1.3.4';
@@ -149,6 +152,7 @@
 		#copyright {			
 			padding:0;				
 			background:none;
+            width:auto!important;
             
             .page-width{padding:0!important; width:624px!important;}
             
